Ajout des interfaces Java FX